[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemies/SpawnOrksPosition.gd" type="Script" id=1]

[node name="SpawnOrksPosition" type="Position2D"]
script = ExtResource( 1 )

[node name="IntervalTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 10.0
[connection signal="timeout" from="IntervalTimer" to="." method="_on_IntervalTimer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
